--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "sass": "^1.81.0",
     "vue": "^3.5.12"
   },
   "devDependencies": {
