--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "sass": "^1.81.0",
-    "vue": "^3.5.12"
+    "vue": "^3.5.12",
+    "vue3-circle-progress": "^1.0.7"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
